# matlab-skills

./: README.md
detect-python-path/: SKILL.md
detect-python-path/agents/: agent.yaml
matlab-doc-injector/: README.md  SKILL.md  pyproject.toml
matlab-doc-injector/agents/: agent.yaml
matlab-doc-injector/mdi/: __init__.py  __main__.py  cache.py  cli.py  config.py  indexer.py  parser.py
matlab-doc-injector/mdi.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
matlab-help-query/: SKILL.md
matlab-help-query/agents/: agent.yaml
matlab-pdf-reader/: SKILL.md
matlab-table-reader/: SKILL.md
matlab-table-reader/scripts/: inspect_file.m  quick_stats.m
