[project]
name = "mdi"
version = "2.0.0"
description = "MATLAB Doc Injector - 面向 Agent 编程的零延迟本地文档注入引擎"
requires-python = ">=3.12"
dependencies = [
    "markitdown>=0.1.0",
]

[project.scripts]
mdi = "mdi.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["mdi*"]
